--- a/gazebo_path_plugin/package.xml
+++ b/gazebo_path_plugin/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ostapvad@todo.todo">ostapvad</maintainer>
+  <maintainer email="ostapvad@fel.cvut.cz">ostapvad</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -56,7 +56,6 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <gazebo_ros gazebo_model_path="/home/gestom/projects/vadym/src/Path-Planner-for-Phoenix-environment/gazebo_path_plugin/models"/>
     <!-- Other tools can request additional information be placed here -->
 
   </export>
