--- a/gazebo_path_plugin/models/asphalt/model.config
+++ b/gazebo_path_plugin/models/asphalt/model.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" ?>
 <model>
-    <name>slot</name>
+    <name>asphalt</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
         <name>Vadym Ostapovych</name>
         <email></email>
     </author>
-    <description>Simple parking slot for the car</description>
+    <description>Parking slot for the car</description>
 </model>
