--- a/gazebo_path_plugin/models/brick_wall/model.config
+++ b/gazebo_path_plugin/models/brick_wall/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>metal wall</name>
+    <name>brick_wall</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
