--- a/gazebo_path_plugin/models/parking_slot/model.config
+++ b/gazebo_path_plugin/models/parking_slot/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>parking_slot</name>
+    <name>Parking slot</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
