--- a/basic_maneuvers/CMakeLists.txt
+++ b/basic_maneuvers/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(gazebo_path_plugin)
-
+project(basic_maneuvers)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -11,9 +10,8 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
-  gazebo_msgs
-  gazebo_ros
-
+  std_msgs
+  phoenix_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -71,11 +69,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs  # Or other packages containing msgs
-   gazebo_msgs
-   )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -108,8 +105,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES gazebo_path_plugin
-#  CATKIN_DEPENDS gazebo_ros
+#  LIBRARIES basic_maneuvers
+#  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -126,7 +123,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/gazebo_path_plugin.cpp
+#   src/${PROJECT_NAME}/basic_maneuvers.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -137,7 +134,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/gazebo_path_plugin_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/basic_maneuvers_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -201,7 +198,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_gazebo_path_plugin.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_basic_maneuvers.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
@@ -209,10 +206,6 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-
-# add shell file for gazebo path settings
-catkin_add_env_hooks(gazebo_env SHELLS sh DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
-
-add_executable(world_spawner src/world_spawner/spawn_world.cpp)
-target_link_libraries(world_spawner ${catkin_LIBRARIES})
-add_dependencies(world_spawner gazebo_path_plugin_generate_messages_cpp)
+add_executable(maneuvers src/test.cpp)
+target_link_libraries(maneuvers ${catkin_LIBRARIES})
+#add_dependencies(maneuvers basic_maneuvers_generate_messages_cpp)
