--- a/gazebo_path_plugin/models/borders/model.config
+++ b/gazebo_path_plugin/models/borders/model.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" ?>
 <model>
-    <name>car</name>
+    <name>borders</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
-        <name></name>
+        <name>Vadym Ostapovych</name>
         <email></email>
     </author>
-    <description></description>
+    <description>Borders for the path</description>
 </model>
